env/overlays/production/env/service-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-app
  namespace: production
spec:
  selector:
    app: production-app
  ports:
    - protocol: TCP
      port: 443
      targetPort: 443
