env/overlays/production/env/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-server-ingress
  namespace: production
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    # If you encounter a redirect loop or are getting a 307 response code
    # then you need to force the nginx ingress to connect to the backend using HTTPS.
    #
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  rules:
  - host: prod.gorgoro.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: production
            port: 
              number: 80
              name: https
  tls:
  - hosts:
    - prod.gorgoro.com
    secretName: secret to sever.crt and server.key # change this shit
